# LogosAI

./: .gitignore  .replit  README.md  ai_voice_agent.py  app.py  auth.py  business_hours.py  call_engine.py  cookies.txt  latency_logger.py  main.py  migrate_db.py  models.py  myapp_backup.sql  orders_db.py  pitch_deck_generator.py  providers.py  pyproject.toml  replit.md  replit_auth.py  seed_data.sql  ssml_helper.py
.agents/: agent_assets_metadata.toml
attached_assets/: Pasted--Project-Build-a-Python-SaaS-web-application-using-Flask-that-automates-incoming-phone-calls-f-1761177981397_1761177981398.txt  Pasted--xml-version-1-0-encoding-UTF-8-Response-Gather-action-http-8c1df603-f740-4cbd-84fd-618-1761258566726_1761258566728.txt  Pasted-A-HTTP-500-error-from-your-webhook-URL-means-your-server-is-encountering-an-internal-error-when-Twil-1761248026836_1761248026837.txt  Pasted-I-need-you-to-update-my-website-homepage-with-clearer-m_1768067325903.txt  Pasted-I-need-you-to-update-my-website-homepage-with-clearer-m_1768068266415.txt  Pasted-Pasted-To-build-an-AI-voice-flow-that-can-answer-questions-like-Where-is-my-order-and-then-ask-for-a-1761252976768_1761252976770.txt  Pasted-Prompt-1-Fix-the-purchase-intent-loop-lead-capture--177_1774144287065.txt  Pasted-SYSTEM-PROMPT-FOR-REPLIT-AGENT-You-are-an-AI-voice-opti_1767889899475.txt  Pasted-Thank-you-for-sharing-your-TwiML-and-describing-the-issue-Here-s-a-breakdown-of-what-s-likely-happe-1761342054941_1761342054942.txt  Pasted-https-calendly-com-logos-ai-ca-g6z3-new-meeting-I-need-_1768067275403.txt  (+11 more)
templates/: base.html  (+24 more)
